v-model computed 추가

--- a/170829/index.html
+++ b/170829/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>vue 1st class</title>
-    <script src="node_modules/vue/dist/vue.min.js"></script>
+    <script src="../node_modules/vue/dist/vue.min.js"></script>
 </head>
 <body>
 <div class="demo">
